// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering names the tests a killed shard never got to 1`] = `
"**1 did not run · 1 passed**

|  | Test | Shard | Attempts | Time |
| :-- | :-- | --: | --: | --: |
| 🚫 | \`settings/ManualBackup\` | 1 |  |  |
| ✅ | \`screens/Home\` | 1 | 1 | 1m 14s |

"
`;

exports[`rendering reports an all-green run 1`] = `
"**2 passed**

|  | Test | Shard | Attempts | Time |
| :-- | :-- | --: | --: | --: |
| ✅ | \`onboarding/CreateWallet\` | 1 | 1 | 2m 12s |
| ✅ | \`screens/Home\` | 1 | 1 | 1m 14s |

"
`;

exports[`rendering says so plainly when no shard reported anything 1`] = `
"No e2e results were reported. Look into the shard jobs instead.

"
`;

exports[`rendering skips a half-written row without losing the rest of the file 1`] = `
"**1 passed**

|  | Test | Shard | Attempts | Time |
| :-- | :-- | --: | --: | --: |
| ✅ | \`screens/Home\` | 1 | 1 | 1m 14s |

"
`;

exports[`rendering sorts failures and retries above passes, merging every shard file 1`] = `
"**1 failed · 1 retried · 1 passed**

|  | Test | Shard | Attempts | Time |
| :-- | :-- | --: | --: | --: |
| ❌ | \`transactions/WrapTransaction\` | 2 | 3 | 4m 12s |
| ⚠️ | \`cash/SetupResume\` | 1 | 2 | 2m 07s |
| ✅ | \`screens/Home\` | 2 | 1 | 40s |

"
`;
